--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
+    "redis-commands": "^1.5.0",
+    "redis-mock": "^0.44.0",
+    "redis-parser": "^3.0.0",
     "request": "^2.88.0"
   }
 }
