--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.5",
+    "redis-mock": "^0.44.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
+    "redis": "^2.8.0",
     "redis-commands": "^1.5.0",
     "redis-mock": "^0.44.0",
     "redis-parser": "^3.0.0",
